2008-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Update libtool to latest CVS version.

2008-01-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (DisplayImageCommand): No longer default to
	reading standard input if stdin fails isatty() test.  This
	behavior was causing failure to launch from Gnome and it is
	difficult to work around the issue from within a .desktop file.	
	(AnimateImageCommand): No longer default to
	reading standard input if stdin fails isatty() test.

2007-12-23  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* VisualMagick/configure/configure.rc: Better positioning of frog,
	changed original ImageMagick messages.	
	* VisualMagick/configure/configure.exe: New build.

2007-12-22  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* magick/command.c: Fix compilability issue for Microsoft Visual
	Studio 6.

2007-12-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: Use some improved tests for POSIX standard types
	available in Autoconf 2.61.
	Add support for configuring a magick_uintmax_t type.
	Added support for configuring a magick_uintptr_t type.

2007-12-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.h (MagickSafeMultiplySize_t): New function to
	perform a safe multiply.  A multiplication overflow results in
	zero.
	(MagickAllocateMemory): Check for size_t value truncation/overflow
	and zero size before deciding to allocate memory.  Any detected
	failure results in a NULL pointer being returned.
	(MagickReallocMemory): Add a type parameter to use in cast in
	order to avoid C++ portability problem.
	* PerlMagick/Magick.xs: Eliminate use of deprecated methods.
	* magick/memory.c (MagickAcquireMemory): New function to allocate
	memory.
	(MagickAcquireMemoryArray): New function to allocate memory for an
	array of objects.
	(MagickCloneMemory): New function to intelligently copy memory.
	(MagickReallocateMemory): New function to re-allocate memory.