@@ -14720,7 +14720,7 @@ static void ImportUsage(void)
 */
 static void PrintFeature(const char* feature,MagickBool support)
 {
-  (void) fprintf(stdout,"  %-22s %s\n", feature, (support ? "yes" : "no"));
+  (void) fprintf(stdout,"  %-24s %s\n", feature, (support ? "yes" : "no"));
 }
 static unsigned int VersionCommand(ImageInfo *ARGUNUSED(image_info),
   int ARGUNUSED(argc),char **ARGUNUSED(argv),char **ARGUNUSED(metadata),
@@ -14743,7 +14743,11 @@ static unsigned int VersionCommand(ImageInfo *ARGUNUSED(image_info),
 
   /* Large File Support */
   supported=(sizeof(off_t) > 4);
-  PrintFeature("Large Files", supported);
+  PrintFeature("Large Files (> 32 bit)", supported);
+
+  /* Large Memory Support */
+  supported=(sizeof(PixelPacket *) > 4);
+  PrintFeature("Large Memory (> 32 bit)", supported);
 
   /* BZIP */
   supported=MagickFalse;
