@@ -21,6 +21,18 @@
 </tr>
 </table>
 <p>
+2008-01-17  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c (VersionCommand): Include a "Large Memory" item
+        in the Feature Support list.<BR>
+  <LI> coders/png.c (RegisterPNGImage): Remove reference to dead PNG
+        ftp site.<BR>
+  <LI> VisualMagick/configure/configure.cpp (InitInstance): Remove
+        project dependency on dxguid.lib (Direct-X).
+
+</UL>
+<p>
 2008-01-13  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
