@@ -1,3 +1,12 @@
+2008-01-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/command.c (VersionCommand): Include a "Large Memory" item
+	in the Feature Support list.
+	* coders/png.c (RegisterPNGImage): Remove reference to dead PNG
+	ftp site.
+	* VisualMagick/configure/configure.cpp (InitInstance): Remove
+	project dependency on dxguid.lib (Direct-X).
+
 2008-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* configure.ac: Update libtool to latest CVS version.
